--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn">See More</a>
+            <a href="https://github.com/Parth5409?tab=repositories" class="btn">See More</a>
         </div>
     </div>
 
