--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <a href="https://www.instagram.com/parth_gaikwad_09/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/parth-gaikwad-891555285/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="./images/my-cv.pdf" download class="btn btn2">Download Resume</a>
+                    <a href="./assets/ParthResume.pdf" download class="btn btn2">Download Resume</a>
                 </div>
                 <div class="contack-right">
                     <form name="submit-to-google-sheet">
