--- a/index.html
+++ b/index.html
@@ -65,11 +65,10 @@
                     </div>
                     <div class="tab-contents" id="projects">
                         <ul>
-                            <li><span>Glass Slider Effect</span><br>A simple glass slider effect using only HTML and
-                                CSS.
-                            </li>
+                            <li><span>WanderLust</span><br>A comprehensive home rent website allowing users to explore, create, and manage property listings with secure authentication and seamless user experiences.</li>
                             <li><span>Simon Says Game Using Js</span><br>A simple logic based game made using
                                 JavaScript.</li>
+                            <li><span>WanderLust</span><br>A comprehensive home rent website allowing users to explore, create, and manage property listings with secure authentication and seamless user experiences.</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
@@ -91,11 +90,11 @@
             <h1 class="sub-title">My Projects</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="./assets/work-1.png">
+                    <img src="./assets/phone-wanderlust.png">
                     <div class="layer">
-                        <h3>Glass Effect Slider</h3>
-                        <p>A simple glass slider effect using only HTML and CSS. Do click on Hamburger Menu.</p>
-                        <a href="https://parth5409.github.io/Glass-Effect-Sidebar/" target="_blank"><i
+                        <h3>WanderLust</h3>
+                        <p>A comprehensive home rent website allowing users to explore, create, and manage property listings with secure authentication and seamless user experiences.</p>
+                        <a href="https://wanderlust-ocrz.onrender.com/listings" target="_blank"><i
                                 class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
